# Pirus

./: .gitignore  .travis.yml  CMakeLists.txt  Pirus.sln
Examples/: pretty_print.cpp  ugly_html.htm
Pirus/: Definitions.h  Exceptions.h  Fragment.h  Parser.h  Pirus.vcxproj  Tag.h  TagFormatter.h
Pirus/Header/: Constants.h  Exceptions.h  Fragment.h  Node.h  Parser.h  Splitter.h  Tag.h  TagBuilder.h
Pirus/Source/: Fragment.cpp  Parser.cpp  Source.cpp  Splitter.cpp  Tag.cpp  TagBuilder.cpp  TagFormatter.cpp
Tests/: CMakeLists.txt  TagFormatterTest.cpp  TagTest.cpp  Tests.vcxproj  fragment_test.cpp  splitter-test.cpp  tests.cpp
Tests/Tests/: fragment_test.cpp  node-test.cpp  splitter-test.cpp  tag-test.cpp  tagbuilder_test.cpp
